Fixed line spacing on p tag.

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -52,6 +52,7 @@ a {
 	font-weight: 400;
 	font-style: normal;
 	color: base.$primary;
+	line-height: 1.5;
 }
 
 a {
