--- a/components/Highlights.module.scss
+++ b/components/Highlights.module.scss
@@ -56,7 +56,6 @@
 
 	p {
 		text-align: left;
-		line-height: 1.5;
 	}
 }
 
